updated Dockerfile Support.