@@ -3,6 +3,7 @@ package org.menu;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class BreakfastMenu extends OrderingMenuImpl implements OrderingMenu {
 
@@ -49,7 +50,7 @@ public class BreakfastMenu extends OrderingMenuImpl implements OrderingMenu {
         // At breakfast, multiple mains cannot be ordered
         List<String> mainDish = this.orderedMainDishes.entrySet().stream()
                 .filter(entry -> entry.getValue() > 1L)
-                .map(Map.Entry::getKey).toList();
+                .map(Map.Entry::getKey).collect(Collectors.toList());
         if (this.orderedMainDishes.size() > 1 || (mainDish.size() > 0)) {
             throw new Exception(String.format("%s cannot be ordered more than once", mainDish.get(0)));
         }
@@ -58,7 +59,7 @@ public class BreakfastMenu extends OrderingMenuImpl implements OrderingMenu {
         // At breakfast, multiple sides cannot be ordered
         List<String> sideDish = this.orderedSideDishes.entrySet().stream()
                 .filter(entry -> entry.getValue() > 1L)
-                .map(Map.Entry::getKey).toList();
+                .map(Map.Entry::getKey).collect(Collectors.toList());
         if (this.orderedSideDishes.size() > 1 || (sideDish.size() > 0)) {
             throw new Exception(String.format("%s cannot be ordered more than once", sideDish.get(0)));
         }
